# gboost

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh
ompc/: example.py  findhypothesis_graph.py  gboost1d5.py  gboost2.py  gspan.py  lpboost.py  rocscore.py
ompc/examples/mex/: mex.h  mex.py  mexlib.cpp  mexlib.h
src-convert/: convert.sh  fix.py  post.py
src-convert/ompc-out/: findhypothesis_graph.py  gboost1d5.py  gboost2.py  gspan.py  lpboost.py  rocscore.py
src-convert/original-m/: example.m  gboost1d5.m  gboost2.m  lpboost.m
src-convert/post/: common.json  findhypothesis_graph.json  gboost2.json
src-convert/settings/: common.json  example.json  findhypothesis_graph.json  gboost2.json  gspan.json  lpboost.json
src-graphmatch/: CMakeLists.txt  graphmatch.cpp
src-graphmatch/vflib-2.0/src/: argedit.cc
src-gspan/: CMakeLists.txt  graph.cpp  mexgspan.cpp  misc.cpp
src-main/: README.txt  example.py  findhypothesis_graph.py  gboost1d5.py  gboost2.py  gspan.py  lpboost.py  matrix.py  my_src.py  py2.py  py2or3.py  py3.py  rocscore.py  slicing.py
src-main/conversion/: convert.sh  post_smop.py
src-main/original-m/: common.json  common.txt  example.json  example.txt  findhypothesis_graph.json  findhypothesis_graph.m  gboost2.json  rocscore.m
src-my-mex/: mex.h
